# cardano-wallet

./: .gitignore  cabal.project  cabal.project.freeze  hie.yaml  output.svgz  stack.yaml
.buildkite/: nightly.yml
.github/workflows/: haskell.yml
lib/core/: cardano-wallet-core.cabal
lib/core-integration/src/Test/Integration/Framework/: DSL.hs
lib/core/src/Cardano/: Wallet.hs
lib/core/src/Cardano/Wallet/: Api.hs  Transaction.hs
lib/core/src/Cardano/Wallet/Api/: Server.hs  Types.hs
lib/core/src/Cardano/Wallet/DB/: Sqlite.hs
lib/core/src/Cardano/Wallet/DB/Sqlite/: Types.hs
lib/core/src/Cardano/Wallet/Primitive/: CoinSelection.hs  Fee.hs  Types.hs
lib/core/src/Cardano/Wallet/Primitive/AddressDiscovery/: Sequential.hs
lib/core/src/Cardano/Wallet/Primitive/CoinSelection/: LargestFirst.hs  Migration.hs  Random.hs
lib/core/src/Cardano/Wallet/Primitive/Types/: TokenBundle.hs  TokenMap.hs  TokenPolicy.hs  TokenQuantity.hs  Tx.hs
lib/core/src/Cardano/Wallet/Shelley/MultiAsset/: Compatibility.hs
lib/core/src/Data/Map/NonEmpty/Strict/: Internal.hs
lib/core/src/Ouroboros/Network/Client/: Wallet.hs
lib/core/test/bench/db/: Main.hs
lib/core/test/unit/Cardano/: WalletSpec.hs
lib/core/test/unit/Cardano/Byron/Codec/: CborSpec.hs
lib/core/test/unit/Cardano/Wallet/Api/: TypesSpec.hs
lib/core/test/unit/Cardano/Wallet/DB/: Arbitrary.hs  SqliteSpec.hs  StateMachine.hs
lib/core/test/unit/Cardano/Wallet/Primitive/: CoinSelectionSpec.hs  FeeSpec.hs  ModelSpec.hs  TypesSpec.hs
lib/shelley/: cardano-wallet.cabal
lib/shelley/bench/: Restore.hs
lib/shelley/exe/: shelley-test-cluster.hs
lib/shelley/src/Cardano/Wallet/: Shelley.hs
lib/shelley/src/Cardano/Wallet/Byron/: Compatibility.hs
lib/shelley/src/Cardano/Wallet/Shelley/: Compatibility.hs  Launch.hs  Network.hs  Transaction.hs
lib/shelley/test/integration/: Main.hs
lib/simulation/: simulation.cabal
lib/simulation/lib/: Deriving.hs  Fraction.hs  Interval.hs  Rounding.hs  Simulation.hs  Successor.hs
lib/simulation/lib/Data/: Bag.hs  Distribution.hs  LogDistribution.hs
lib/simulation/lib/Data/Distribution/: Log.hs
lib/simulation/lib/Simulation/: Implementation.hs  Prelude.hs  Test.hs
lib/simulation/lib/Simulation/Implementation/: Internal.hs
lib/simulation/lib/Simulation/Model/: Basic.hs  Indexed.hs
lib/simulation/lib/Simulation/Test/: Chart.hs
lib/simulation/lib/Text/: Bar.hs  BarChart.hs  Colour.hs  Label.hs
lib/test-utils/: cardano-wallet-test-utils.cabal
lib/test-utils/src/Test/QuickCheck/: Extra.hs
lib/wallet/src/Cardano/: Wallet.hs
lib/wallet/src/Cardano/Wallet/Api/: Server.hs  Types.hs
lib/wallet/src/Cardano/Wallet/DB/: Layer.hs
lib/wallet/src/Cardano/Wallet/Shelley/: Compatibility.hs  Transaction.hs
nix/.stack.nix/: cardano-wallet-core.nix  cardano-wallet-test-utils.nix
specifications/api/: swagger.yaml
(+32 files in other folders)
